fixes flicker due .page-content a:hover overrides

--- a/docs_src/assets/css/bibliography.css
+++ b/docs_src/assets/css/bibliography.css
@@ -30,6 +30,10 @@
     transition: all 0.2s;
 }
 
+.bib-buttons:hover {
+   border: 0.16em solid rgba(255, 255, 255, 0);
+}
+
 .bib-doi {
     background-color: var(--color-bib-doi);
 }
